share/revng/test/tests/invalidation/three-jump-targets.S.mark-jump-target.filecheck
#
# This file is distributed under the MIT License. See LICENSE.md for details.
#

# Add 0x500000, which is already a jump target and, therefore, it shouldn't lead to invalidation.
---
Changes:
  - Path:            '/Functions'
    Add:
      Entry:           "0x500000:Code_x86_64"
...
# CHECK-NOT: lift:
